Actions
Bug #9401
closedcpio: comparison between pointer and zero character constant
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
issue found by gcc 7 build:
cpio.c: In function 'gethdr': cpio.c:4682:41: error: comparison between pointer and zero character constant [-Werror=pointer-compare] while ((j < NAMSIZ) && (&nambuf[j] != ^~ cpio.c:4682:30: note: did you mean to dereference the pointer? while ((j < NAMSIZ) && (&nambuf[j] != ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2ae4c13b79c29604a25f0cedb59f2acff223bd26
commit 2ae4c13b79c29604a25f0cedb59f2acff223bd26 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:39.000Z 9401 cpio: comparison between pointer and zero character constant Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: C Fraire <cfraire@me.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions