9401 cpio: comparison between pointer and zero character constant Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: C Fraire <cfraire@me.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>